# semantic-drive-search

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGES.md  CONTRIBUTING.md  Makefile  QWEN.md  README.md  claude-skill.md  cli.py  install-skill.sh  mcp_server.py  pyproject.toml
.claude-plugin/: plugin.json
.claude/skills/sds/: SKILL.md
.github/workflows/: ci.yml
backend/: auth.py  cli.py  config.py  drive.py  embeddings.py  exceptions.py  logging_config.py  main.py  mcp_server.py  models.py  organizer.py  security.py  vector_store.py
docs/superpowers/plans/: 2026-03-15-semantic-drive-search.md
docs/superpowers/specs/: 2026-03-15-semantic-drive-search-design.md
skills/get-image-url/: SKILL.md
skills/index-folder/: SKILL.md
skills/list-folders/: SKILL.md
skills/organize-folder/: SKILL.md
skills/search-images/: SKILL.md
static/: app.js  index.html
tests/: test_api.py  test_config.py  test_embeddings.py  test_vector_store.py
